# CG_HW_Project

./: .gitignore
HW_P1/P1/: Project 1 Command Reference.docx  Project1_Solution_exe.rar
HW_P1/P1/ImageEditing-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ImageEditing.sln  ImageEditing.vcxproj  ImageEditing.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libtarga.vcxproj  libtarga.vcxproj.filters
HW_P1/P1/ImageEditing-master/Debug/: libtarga.lib
HW_P1/P1/ImageEditing-master/src/: Main.cpp  ScriptHandler.cpp  TargaImage.cpp  TargaImage.h  libtarga.c
HW_P1/SubmissionFolder/: Project1-Grading.doc
HW_P1/Testing_portabliliy/Source_code/src/: TargaImage.cpp
HW_P1/ntuB12705015-ImageEditing-1/: Techdocument.docx  userManual.txt
HW_P1/ntuB12705015-ImageEditing-1/executable/: Run_this.lnk
HW_P1/ntuB12705015-P01-02/executable/: executePortable.bat
HW_P1/ntuB12705015-P01-03/Source_code/: TargaImage.h
HW_P2/B12705015- P02-01/: document.docx
HW_P2/B12705015- P02-01/exe/: MazeLib.lib
HW_P2/B12705015- P02-01/src/: MapWidget.cpp  Maze.cpp  Maze.h  MazeWindow.cpp
HW_P2/MazeVisibilityTemplate/MazeVisibility/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MazeLib.vcxproj  MazeLib.vcxproj.filters  MazeVisibility.sln  MazeVisibility.vcxproj  MazeVisibility.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HW_P2/sampleSolution/sampleSolution/: MazeLib.lib
HW_P3/CheckPoint-1/: Project 3 Grading_checkpoint_1.docx
HW_P3/CheckPoint-2/: Project 3 Grading_checkpoint_2.docx
HW_P3/CheckPoint-2/WaterSurfaceTemplate/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  RollerCoasters.sln  RollerCoasters.vcxproj  RollerCoasters.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HW_P3/CheckPoint-2/WaterSurfaceTemplate/Debug/: Utilities.lib
HW_P3/CheckPoint-2/WaterSurfaceTemplate/RollerCoasters.dir/Debug/: RollerCoasters.exe.recipe
HW_P3/CheckPoint-2/WaterSurfaceTemplate/RollerCoasters.dir/Debug/RollerCoasters.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
HW_P3/CheckPoint-2/WaterSurfaceTemplate/Utilities.dir/Debug/: Utilities.lib.recipe
HW_P3/CheckPoint-2/WaterSurfaceTemplate/Utilities.dir/Debug/Utilities.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Utilities.lastbuildstate
HW_P3/CheckPoint-2/WaterSurfaceTemplate/include/FL/: Fl_Menu_Item.H
HW_P3/CheckPoint-2/WaterSurfaceTemplate/src/: CallBacks.H  CallBacks.cpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp
HW_P3/CheckPoint-2/WaterSurfaceTemplate/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
HW_P3/CheckPoint-2/WaterSurfaceTemplate/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
HW_P3/CheckPoint-2/WaterSurfaceTemplate/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
HW_P3/CheckPoint-2/WaterSurfaceTest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  RollerCoasters.sln  RollerCoasters.vcxproj  RollerCoasters.vcxproj.filters  Utilities.vcxproj  Utilities.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HW_P3/final/: Project 3 Grading_final.docx  Project 3_final.docx  point.txt  ~$oject 3 Grading_final.docx
src/: TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp
src/Debug/: Utilities.lib
(+141 files in other folders)
